complete get, post nft
